Replaced some images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 </div>
                 <div class="col-lg-7">
-                    <img class="h-100 w-100" src="images/img-1.jfif" alt="Burger-img">
+                    <img class="h-100 w-100" src="Images/img-1.jfif" alt="Burger-img">
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
             <div class="col-lg-3 bg-light  menu-scroll-items p-3 ">
                 <div class="row">
                     <div class="col-sm-5">
-                        <img class="h-100 w-100" src="images/grilled_chicken_burger.png" alt="">
+                        <img class="h-100 w-100" src="Images/grilled_chicken_burger.png" alt="img">
                     </div>
                     <div class="col-sm-7"><p>Grilled Butter Chicken Burger</p></div>
                 </div>
@@ -247,7 +247,7 @@
             <div class="col-lg-3 p-3 bg-light menu-scroll-items">
                 <div class="row">
                     <div class="col-sm-5">
-                        <img class="h-100 w-100" src="images/menu-alootiki-burger.png" alt="">
+                        <img class="h-100 w-100" src="Images/menu-alootiki-burger.png" alt="img">
                     </div>
                     <div class="col-sm-7"><p class="p-red ">McAloo Tikki Burger</p></div>
                 </div>
@@ -256,7 +256,7 @@
             <div class="col-lg-3 p-3 bg-light menu-scroll-items">
                 <div class="row">
                     <div class="col-sm-5">
-                        <img class="h-100 w-100" src="Images/Dosa_mix_burger.png" alt="">
+                        <img class="h-100 w-100" src="Images/Dosa_mix_burger.png" alt="img">
                     </div>
                     <div class="col-sm-7">
                         <p>Dosa Masala Burger</p>
@@ -284,28 +284,28 @@
         <div class="container-fluid ctc-2">
             <div class="row h-100 text-center">
                 <div class="col-lg-3 h-100">
-                    <img class="h-50 w-50" src="images/Happy Meal App.png" alt="">
+                    <img class="h-50 w-50" src="Images/Happy Meal App.png" alt="img">
 
-                    <img class="w-75" src="images/happ-meal.gif" alt="">
+                    <img class="w-75" src="Images/happ-meal.gif" alt="img">
                     <p class="p-red"><strong>DOWNLOAD APP FROM</strong></p>
 
                     <button type="button" class="btn btn-lg w-50 px-0 py-0"><img class=" h-100 w-100"
-                            src="images/ctc-2-apple.png" alt=""></button>
+                            src="Images/ctc-2-apple.png" alt="img"></button>
                     <button type="button" class="btn btn-lg w-50 px-0 py-0"><img class=" h-100 w-100"
-                            src="Images/ctc-2-googleplay.png" alt=""></button>
+                            src="Images/ctc-2-googleplay.png" alt="img"></button>
 
                 </div>
                 <div
                     class="col-lg-9 px-5 text-center align-items-center justify-content-center font-weight-bold ctc-2-right">
                     <div class="row h-50 align-items-center justify-content-center ctc-2-rowtop">
-                        <div class="col-lg-4">
-                            <img class="ctc-2-right-img" src="images/ctc-2-img1.png" alt="">
+                        <div class="col-lg-4">img
+                            <img class="ctc-2-right-img" src="Images/ctc-2-img1.png" alt="img">
                             <p class="p-red">Discover
                                 your kid's</p>
                             <p class="p-yellow">musical talent</p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="ctc-2-right-img" src="images/ctc-2-img2.png" alt="">
+                            <img class="ctc-2-right-img" src="Images/ctc-2-img2.png" alt="img">
                             <p class="p-yellow">Create</p>
                             <p class="p-red">happy moments</p>
                             <p> <span class="p-yellow">with your </span>
@@ -313,19 +313,19 @@
                             </p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="ctc-2-right-img" src="images/ctc-2-img3.png" alt="">
+                            <img class="ctc-2-right-img" src="Images/ctc-2-img3.png" alt="img">
                             <p class="p-yellow">Explore our</p>
                             <p class="p-red">animate books</p>
                             <p class="p-yellow">with your kid</p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="ctc-2-right-img" src="images/ctc-2-img4.png" alt="">
+                            <img class="ctc-2-right-img" src="Images/ctc-2-img4.png" alt="img">
                             <p class="p-red">Discover our
                                 collection of</p>
                             <p class="p-yellow">interactive books</p>
                         </div>
                         <div class="col-lg-4">
-                            <img class="ctc-2-right-img" src="images/ctc-2-img5.png" alt="">
+                            <img class="ctc-2-right-img" src="Images/ctc-2-img5.png" alt="img">
 
                             <p class="p-red">Discover our
                                 books as they</strong></p>
@@ -346,7 +346,7 @@
         <div class="container-fluid ctc-3">
         <div class="row">
             <div class="col-lg-6 ctc-3-left">
-                <img src="images/Happy Meal.svg" alt="">
+                <img src="Images/Happy Meal.svg" alt="img">
                 <h2 class="font-weight-bold pt-4" >Don’t worry,
                     </h2><h2 class="font-weight-bold pt-1 pb-4"> Eat Happy</h2>
                 <h6 class="p-red font-weight-bold pb-4" >Now every meal can be a Happy Meal</h6>
@@ -365,16 +365,16 @@
                 
                 <div class="row my-5 ml-5 py-5">
                     <div class="col-lg-4 ">
-                        <img class="h-75 w-100 rounded" src="images/ctc-3-img-1.jfif" alt="">
+                        <img class="h-75 w-100 rounded" src="Images/ctc-3-img-1.jfif" alt="img">
 
                         <p class="barbie-head text-center rounded">Pet Vet Barbie</p>
                         </div>
                     <div class="col-lg-4">
-                        <img class="h-75 w-100 rounded" src="images/ctc-3-img-2.jfif" alt="">
+                        <img class="h-75 w-100 rounded" src="Images/ctc-3-img-2.jfif" alt="img">
                         <p class="barbie-head text-center rounded">Princess Barbi</p>
                         </div>
                     <div class="col-lg-4">
-                        <img class="h-75 w-100 rounded" src="images/ctc-3-img-3.jfif" alt="">
+                        <img class="h-75 w-100 rounded" src="Images/ctc-3-img-3.jfif" alt="img">
                         <p class="barbie-head text-center rounded">Racer Car Barbie</p>
                         </div>
                 </div>
