Added buttons for carousal

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h2 class="font-weight-bold py-3 pl-3 menu-head">McAloo Tikki Burger®</h2>
-                    <h5 class="font-weight-bold py-4 p-brown">The one that never goes out of f(l)avour.</h5>
+                    <h5 class="font-weight-bold py-4 p-brown">The one that never goes out of flavour.</h5>
                     <p>A golden fried vegetarian patty prepared with peas, potato and infused with aromatic spices. Clubbed with
                         sliced tomatoes, shredded red onion, and tangy tomato mayonnaise. Served in a warm toasted bun</p>
                     <p class="font-weight-bold"> Serving Size: 146 gm</p>
@@ -128,7 +128,7 @@
                     <div class="row menu-content-row pt-3">
                         <div class="col-sm-3">
                             <p>Calories</p>
-                        <p class="font-weight-bold">334 kCal</p>
+                        <p class="font-weight-bold">334kCal</p>
                         </div>
                         <div class="col-sm-3">
                             <p>Protien</p>
@@ -200,7 +200,7 @@
                     <div class="row menu-content-row pt-3">
                         <div class="col-sm-3">
                             <p>Calories</p>
-                        <p class="font-weight-bold">307 kCal</p>
+                        <p class="font-weight-bold">307kCal</p>
                         </div>
                         <div class="col-sm-3">
                             <p>Protien</p>
@@ -223,14 +223,6 @@
               </div>
 
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
 
         
@@ -264,11 +256,12 @@
                 </div>
                 
             </div>
-            <div class="col-lg-3 p-3 bg-light menu-scroll-items">
-                <button type="button" class="btn btn-outline-danger rounded-circle ctc-3-btn-1 "><i
+            <div class="col-lg-3  bg-light menu-scroll-items">
+
+                <button type="button" class=" btn btn-outline-danger rounded-circle ctc-3-btn-1 carousel-control-prev ml-5 px-4" href="#carouselExampleControls" role="button" data-slide="prev"><i
                     class="fa-solid fa-less-than fa-1x"></i></button>
-                    <button type="button" class="btn btn-outline-danger rounded-circle ctc-3-btn-2"><i
-                        class="fa-solid fa-greater-than fa-1x"></i></button>
+                <button type="button" class=" btn btn-outline-danger rounded-circle ctc-3-btn-2 carousel-control-next mr-5 px-4" href="#carouselExampleControls" role="button" data-slide="next"><i
+                    class="fa-solid fa-greater-than fa-1x"></i></button>
 
             </div>
         </div>
@@ -298,7 +291,7 @@
                 <div
                     class="col-lg-9 px-5 text-center align-items-center justify-content-center font-weight-bold ctc-2-right">
                     <div class="row h-50 align-items-center justify-content-center ctc-2-rowtop">
-                        <div class="col-lg-4">img
+                        <div class="col-lg-4">
                             <img class="ctc-2-right-img" src="Images/ctc-2-img1.png" alt="img">
                             <p class="p-red">Discover
                                 your kid's</p>
@@ -321,14 +314,16 @@
                         <div class="col-lg-4">
                             <img class="ctc-2-right-img" src="Images/ctc-2-img4.png" alt="img">
                             <p class="p-red">Discover our
-                                collection of</p>
+                                collection </p>
+                            <p class="p-red">of</p>
                             <p class="p-yellow">interactive books</p>
                         </div>
                         <div class="col-lg-4">
                             <img class="ctc-2-right-img" src="Images/ctc-2-img5.png" alt="img">
 
                             <p class="p-red">Discover our
-                                books as they</strong></p>
+                                books</p>
+                            <p class="p-red">as they</p>
                             <p class="p-yellow">come to life</p>
                         </div>
 
